# clang-target-clone

./: .clang-tidy  .gitignore  CMakeLists.txt
cmake/: FindClang.cmake  FindLit.cmake
src/: CMakeLists.txt  targetclones.cpp
src/cpumodel/: CMakeLists.txt  cpumodel.cpp
src/cpumodel/embed/: CMakeLists.txt  embed.cpp
test/: run.sh  test.c
